# phab-comments-to-md

./: .gitignore  AGENTS.md  Cargo.toml  README.md  test_suggestion.rs
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
docs/: WEBPAGE_STRUCTURE.md
src/: main.rs
